fix(security): restrict production CORS exact origins [DEFECT-011]
Replaces CORS wildcard with exact-origin allowlist. Adds CorsProperties with startup validation. Fixes Web CI lint/test failures. Adds gitleaks config for test fixtures. Moves admin password to GitHub Secret (DEFECT-012).